Add shop and prize management features
- Implemented ShopScreen for displaying available prizes and user inventory.
- Added AddPrizeScreen for adding new prizes with validation.
- Enhanced WelcomeScreen with a welcome message and navigation to add prizes.
- Updated MainViewModel to manage prize addition and deletion.
- Modified User and Setting models to support prize management.
- Updated strings.xml for new UI text.

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Birthday Casino</string>
     <string name="greeting">Ahoj %1$s!</string>
-    <string name="enter_name">Zadej své jméno</string>
+    <string name="enter_name">Zadejte jméno oslavence</string>
 
     <string name="settings">Nastavení</string>
 
@@ -9,6 +9,11 @@
     <string name="starting_credits">Počáteční kredity</string>
     <string name="credits">Kredity</string>
     <string name="total_prize">Celková výhra</string>
+    <string name="add_prize">Přidat výherní cenu</string>
+    <string name="welcome_message">Vítejte v Birthday Casino!</string>
+    <string name="setup_message">Rodina nebo přátelé zde nastaví hru pro oslavence.</string>
+
+    <string name="shop">Obchod</string>
 
     <string name="message_continue">Pokračovat</string>
 
