--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -9,11 +9,15 @@
     <string name="starting_credits">Počáteční kredity</string>
     <string name="credits">Kredity</string>
     <string name="total_prize">Celková výhra</string>
+    <string name="available_prizes">Dostupné výhry</string>
     <string name="add_prize">Přidat výherní cenu</string>
     <string name="welcome_message">Vítejte v Birthday Casino!</string>
     <string name="setup_message">Rodina nebo přátelé zde nastaví hru pro oslavence.</string>
 
     <string name="shop">Obchod</string>
+    <string name="purchased_items">Zakoupené položky</string>
+    <string name="purchase">Zakoupit</string>
+    <string name="price">Cena</string>
 
     <string name="message_continue">Pokračovat</string>
 
