--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -10,6 +10,7 @@
     <string name="credits">Kredity</string>
     <string name="total_prize">Celková výhra</string>
     <string name="available_prizes">Dostupné výhry</string>
+    <string name="winning_prizes">Výherní ceny</string>
     <string name="add_prize">Přidat výherní cenu</string>
     <string name="welcome_message">Vítejte v Birthday Casino!</string>
     <string name="setup_message">Rodina nebo přátelé zde nastaví hru pro oslavence.</string>
