Rename ShopScreen to GiftShopScreen and update references in the code and README.md

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -15,7 +15,7 @@
     <string name="welcome_message">Vítejte v Birthday Casino!</string>
     <string name="setup_message">Rodina nebo přátelé zde nastaví hru pro oslavence.</string>
 
-    <string name="shop">Obchod</string>
+    <string name="shop">Odměny</string>
     <string name="purchased_items">Zakoupené položky</string>
     <string name="purchase">Zakoupit</string>
     <string name="price">Cena</string>
