--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="welcome_message">Welcome to Birthday Casino!</string>
     <string name="setup_message">Family or friends will set up the game for the birthday person.</string>
 
-    <string name="shop">Shop</string>
+    <string name="shop">Gift shop</string>
     <string name="purchased_items">Purchased items</string>
     <string name="purchase">Purchase</string>
     <string name="price">Price</string>
